Fix tab-program style issue on mobile

--- a/src/sass/layout/tab-program.scss
+++ b/src/sass/layout/tab-program.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: stretch;
-  margin: 70px 0 40px;
+  margin: 50px 0 40px;
   max-width: 900px;
   @include for-tablet-landscape-up {
     margin: 40px auto;
